[package]
name = "store-postgres"
edition.workspace = true
version.workspace = true
description = "PostgreSQL store adapter for the Nexus identity plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "store_postgres"
path = "src/lib.rs"

[dependencies]
identity-core = { path = "../core" }
sqlx.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
# customer-api-keys: the adopted secret hasher (keyed HMAC-SHA256) + credential
# generation live here (a shared adapter both the sidecar and authz-admin depend on;
# core stays crypto-free). See src/hasher.rs.
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
subtle.workspace = true
getrandom.workspace = true

[dev-dependencies]
# Integration tests (tests/integration.rs) drive the adapter against a real
# Postgres (gated on STORE_PG_TEST_URL); they need the test runtime + a direct
# pool for table cleanup.
tokio = { workspace = true }
futures.workspace = true
sqlx.workspace = true

[lints]
workspace = true
