[package]
name = "sync-worker"
edition.workspace = true
version.workspace = true
description = "Worker that syncs identity profile changes for the Nexus identity plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "sync-worker"
path = "src/main.rs"

[dependencies]
identity-core = { path = "../core" }
store-postgres = { path = "../store-postgres" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }

[lints]
workspace = true
