[package]
name = "cache-redis"
edition.workspace = true
version.workspace = true
description = "Redis L2 cache tier for the Nexus routing plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "cache_redis"
path = "src/lib.rs"

[dependencies]
router-core = { path = "../router-core" }
redis.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true

[lints]
workspace = true
