[package]
name = "control-plane"
edition.workspace = true
version.workspace = true
description = "Control-plane API for the Nexus routing plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
router-core = { path = "../router-core" }
store-postgres = { path = "../store-postgres" }
dns-resolver = { path = "../dns-resolver" }
tokio.workspace = true
axum.workspace = true
headers.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[lints]
workspace = true
