[package]
name = "control-plane"
edition.workspace = true
version.workspace = true
description = "Control-plane API for the Nexus routing plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
router-core = { path = "../router-core" }
store-postgres = { path = "../store-postgres" }
invalidations-nats = { path = "../invalidations-nats" }
dns-resolver = { path = "../dns-resolver" }
tokio.workspace = true
# admin-action-audit: the NDJSON export streams ledger pages (stream::unfold).
futures.workspace = true
axum.workspace = true
headers.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true

[dev-dependencies]
# http-request-resilience tests: oneshot a router without binding a socket.
tower.workspace = true
# admin-action-audit 5.2 test: fake publisher/proof port impls.
async-trait.workspace = true

[lints]
workspace = true
