[package]
name = "dns-resolver"
edition.workspace = true
version.workspace = true
description = "DNS ownership-proof resolver for the Nexus routing plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "dns_resolver"
path = "src/lib.rs"

[dependencies]
router-core = { path = "../router-core" }
async-trait.workspace = true
hickory-resolver.workspace = true

[lints]
workspace = true
