[package]
name = "router-core"
edition.workspace = true
version.workspace = true
description = "Core routing domain types for the Nexus routing plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "router_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
# Used only by the serde round-trip tests in auth.rs / domain.rs.
serde_json.workspace = true

[lints]
workspace = true
