[package]
name = "router-core"
edition.workspace = true
version.workspace = true
description = "Core routing domain types for the Nexus routing plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "router_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
# admin-action-audit: the audit event record carries a JSON `detail` object.
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
subtle.workspace = true
# Server-minted typed ids — confined to the `ids` module (server-minted-ids D1).
uuid.workspace = true
# Telemetry (first-party-telemetry): the shared init lives here so all routing-plane
# binaries wire it identically. tracing/tracing-subscriber move onto the core crate
# because the telemetry module owns the subscriber stack (previously per-binary).
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-appender-tracing.workspace = true

[lints]
workspace = true
