[package]
name = "store-postgres"
edition.workspace = true
version.workspace = true
description = "PostgreSQL store adapter for the Nexus routing plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "store_postgres"
path = "src/lib.rs"

[dependencies]
router-core = { path = "../router-core" }
sqlx.workspace = true
async-trait.workspace = true
futures.workspace = true
ring.workspace = true
hex.workspace = true

[lints]
workspace = true
