[package]
name = "tenant-router"
edition.workspace = true
version.workspace = true
description = "Per-tenant routing sidecar for the Nexus routing plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "tenant-router"
path = "src/main.rs"

[dependencies]
router-core = { path = "../router-core" }
store-postgres = { path = "../store-postgres" }
cache-redis = { path = "../cache-redis" }
tonic = "0.14"
envoy-types = "0.7"
tokio.workspace = true
tokio-stream = "0.1"
futures.workspace = true
moka = { version = "0.12", features = ["future"] }
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# first-party-telemetry: RED + operational metrics go through the OTel meter (push
# path). Only the API crate is a direct dep — the SDK/OTLP pipeline stays in
# router-core::telemetry; instruments are held in this binary's `metrics` module.
opentelemetry.workspace = true

[dev-dependencies]
# http-request-resilience tests: oneshot a router without binding a socket.
tower.workspace = true

[lints]
workspace = true
